Fixed navigation now displays after content on small devices

--- a/flask_dashed/static/media/css/admin.css
+++ b/flask_dashed/static/media/css/admin.css
@@ -277,8 +277,8 @@ body > section > div{
 }
 @media screen and (max-width: 800px){
     body > section > div{
-        margin: 2em 0 1em 0;
-        border-top: 1px solid #d2d2d2;
+        margin: 0;
+        border-bottom: 1px solid #d2d2d2;
         padding-top: 1em;
     }
 }
